--- a/_doc/index.adoc
+++ b/_doc/index.adoc
@@ -1,3 +1,5 @@
+// SPDX-FileCopyrightText: 2022 Shulhan <ms@kilabit.info>
+// SPDX-License-Identifier: GPL-3.0-or-later
 = ciigo
 :toc:
 :sectanchors:
