--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -6,6 +6,31 @@ Shulhan <ms@kilabit.info>
 :sectanchors:
 :sectlinks:
 
+
+[#v0_13_2]
+==  ciigo v0.13.2 (2024-09-07)
+
+Update on asciidoctor-go bring new features and enhancements,
+
+* Support document attribute "leveloffset".
++
+--
+The ":leveloffset:" on document attribute allow increment or decrement
+the heading level on included files.
+
+Reference: https://docs.asciidoctor.org/asciidoc/latest/directives/include-with-leveloffset/
+--
+
+* Use strict document header format.
++
+Previously, an empty line before Document Title cause the parser
+stop parsing the document header, now an empty lines are skipped.
+Also document attribute can be place anywhere, either before or after
+title, and in between attributes; now it can be only placed after
+revision or author or title.
+
+
+
 [#v0_13_1]
 ==  ciigo v0.13.1 (2024-08-04)
 
